[workspace]

members = [
    "libraries/sae_library",
    "libraries/sae_library_designpattern",
    "libraries/sae_library_caching",
    "libraries/sae_library_configuration",
    "libraries/sae_library_data",
    "libraries/sae_library_database",
    "libraries/sae_library_dependencyinjection",
    "libraries/sae_library_loggin",
    "libraries/sae_library_messagequeue"
]
